--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>J.R.R.Tolkien Story</h1>
+    <h2>J.R.R.Tolkien Story</h2>
     <p>
       During the Battle of Helm's Deep, the Rohirrim are greatly outnumbered by
       the army of orcs and Uruk-hai. The human warriors fight valiantly with
