--- a/index.html
+++ b/index.html
@@ -5,51 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>J.R.R.Tolkien Story</title>
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body>
-    <h1>J.R.R.Tolkien Story</h1>
-    <h2>J.R.R.Tolkien Story</h2>
-    <h3>J.R.R.Tolkien Story</h3>
-    <p>
-      During the Battle of Helm's Deep, the Rohirrim are greatly outnumbered by
-      the army of orcs and Uruk-hai. The human warriors fight valiantly with
-      swords, shields, and spears, while the elf Legolas shoots arrows with his
-      deadly accuracy. The dwarf Gimli wields his axe with ferocity, determined
-      to defend his people from the enemy hordes.
-    </p>
-
-    <p>
-      As Frodo and Sam make their way to Mordor to destroy the One Ring, they
-      encounter Gollum, a strange creature who once possessed the ring. Gollum
-      is a hobbit-like creature, but his body has been twisted and corrupted by
-      the influence of the ring. He wields no weapons, but uses his agility and
-      stealth to try to steal the ring from Frodo and Sam.
-    </p>
-
-    <p>
-      In the Mines of Moria, the Fellowship battles a fierce demon known as a
-      Balrog. The Balrog is a powerful creature of shadow and flame, wielding a
-      fiery whip and a sword of flame. Gandalf, the wizard of the group, faces
-      off against the Balrog in a climactic battle, wielding his staff and his
-      own magic to defeat the beast.
-    </p>
-
-    <p>
-      In the city of Minas Tirith, the men of Gondor prepare for the final
-      battle against Sauron's forces. The soldiers are armed with swords,
-      shields, and bows, and the knights ride fierce warhorses into battle. The
-      defenders of the city are joined by the army of Rohan, who bring their own
-      weapons and battle tactics to the fight.
-    </p>
-
-    <p>
-      During the final battle for the fate of Middle Earth, the armies of the
-      free peoples face off against the legions of orcs and Uruk-hai under the
-      command of the dark lord Sauron. The elf Legolas shoots arrows with deadly
-      precision, while the dwarf Gimli wields his axe with fury. The human
-      Aragorn leads the charge, wielding his sword and inspiring his soldiers
-      with his courage and leadership. Together, the races of Middle Earth fight
-      against the darkness, with the fate of all hanging in the balance.
-    </p>
-  </body>
+  <body></body>
+  <script src="./index.js"></script>
 </html>
